Colab을 통해 생성됨

--- a/4_3_tryExceptElse_Statement.ipynb
+++ b/4_3_tryExceptElse_Statement.ipynb
@@ -49,6 +49,35 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "try:\n",
+        "    print('How are you?')\n",
+        "    print(param)\n",
+        "\n",
+        "except:\n",
+        "    print('Exception occurred')"
+      ],
+      "metadata": {
+        "id": "1-rj5gv4MleD",
+        "outputId": "0dc9c425-0afd-4b03-e441-0637e085b08b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n",
+            "Exception occurred\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
@@ -95,7 +124,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,6 +171,34 @@
       "cell_type": "code",
       "source": [
         "try:\n",
+        "    print('How are you?')\n",
+        "    #print(param)\n",
+        "\n",
+        "except:\n",
+        "    print('Exception occurred')"
+      ],
+      "metadata": {
+        "id": "nqO3G_wcN6eK",
+        "outputId": "c546db29-5f87-472c-fcf5-cad1d05dcef7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
         "  print('How are you?')\n",
         "  #print(param) #해당 코드라인 비활성화시켜 param 변수 사용하여 출력 시도 안함.\n",
         "  #param 변수가 정의되지 않은 것이 없으면 NameError 예외가 발생 안함. 예외가 발생하지 않았음으로 프로그램은 try 블록을 빠져나오지 않고, except 블록으로 이동할 필요도 없음.\n",
@@ -157,7 +214,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,6 +265,38 @@
       "cell_type": "code",
       "source": [
         "try:\n",
+        "    print('How are you?')\n",
+        "    #print(param)\n",
+        "\n",
+        "except:\n",
+        "    print('Exception occurred.')\n",
+        "\n",
+        "else:\n",
+        "    print('Exception did not occur.')"
+      ],
+      "metadata": {
+        "id": "rD-IwOhoOcyC",
+        "outputId": "8120aa60-53af-4e27-9a93-3f21fa19eeca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n",
+            "Exception did not occur.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
         "  print('How are you?')\n",
         "  print(param) #param 변수를 사용하려고 시도. param 변수가 정의되지 않았으므로, NameError 예외가 발생\n",
         "\n",
@@ -217,8 +306,7 @@
         "\n",
         "  #예외가 발생하지 않았을 경우에만 실행됨. 이 경우 else 블록은 실행되지 않음.\n",
         "else:\n",
-        "    print('Exception did not occur.')\n",
-        ""
+        "    print('Exception did not occur.')\n"
       ],
       "metadata": {
         "id": "s9E4zogwpifD",
@@ -227,7 +315,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +394,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +428,7 @@
         "id": "k8-JM-FevYkh",
         "outputId": "86b59e71-f367-4175-b008-05f8555ae772"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,6 +436,38 @@
           "text": [
             "How are you?\n",
             "Exception occurred.\n",
+            "This code should be running.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "    print('How are you?')\n",
+        "    #print(variable)\n",
+        "\n",
+        "except:\n",
+        "    print('Exception occurred.')\n",
+        "\n",
+        "finally:\n",
+        "    print('This code should be running.')"
+      ],
+      "metadata": {
+        "id": "sHIdLzMoPMmK",
+        "outputId": "84de1f4f-a98d-41db-e705-41d1693a6a73",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n",
             "This code should be running.\n"
           ]
         }
@@ -373,7 +493,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +528,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,7 +560,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
