Colab을 통해 생성됨

--- a/4_4_WhileStatementwContinueBreak.ipynb
+++ b/4_4_WhileStatementwContinueBreak.ipynb
@@ -94,6 +94,86 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "counter = 1\n",
+        "\n",
+        "while counter <= 51:\n",
+        "    print(counter)\n",
+        "    counter += 1 #counter = counter + 1\n",
+        "\n",
+        "print('Loop finished!')"
+      ],
+      "metadata": {
+        "id": "_dKhdvgNSQ1r",
+        "outputId": "92faf3c2-c9d4-4889-e841-2a0a38683a6e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n",
+            "20\n",
+            "21\n",
+            "22\n",
+            "23\n",
+            "24\n",
+            "25\n",
+            "26\n",
+            "27\n",
+            "28\n",
+            "29\n",
+            "30\n",
+            "31\n",
+            "32\n",
+            "33\n",
+            "34\n",
+            "35\n",
+            "36\n",
+            "37\n",
+            "38\n",
+            "39\n",
+            "40\n",
+            "41\n",
+            "42\n",
+            "43\n",
+            "44\n",
+            "45\n",
+            "46\n",
+            "47\n",
+            "48\n",
+            "49\n",
+            "50\n",
+            "51\n",
+            "Loop finished!\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "One more exercise for a shorthand notation"
@@ -114,9 +194,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w-X5NPBWagIV",
-        "outputId": "81c6a990-4c33-41ed-ae29-531a02022c29"
+        "outputId": "2cd58287-ab5c-4a0b-d018-3f826108ecad"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
