Colab을 통해 생성됨

--- a/5_RegularExpression.ipynb
+++ b/5_RegularExpression.ipynb
@@ -26,15 +26,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "WhmHjz8Yy0of"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## <font color = 'brown'> **Regular Expression (re)** </font> 정규표현식\n",
@@ -186,6 +177,57 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"cat, hat, bat, sat, mat, combat, unbated\"\n",
+        "pattern = r\".at\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)\n",
+        "\n",
+        "print('\\n')\n",
+        "\n",
+        "for match in matches:\n",
+        "    print(\"Match:\", match)"
+      ],
+      "metadata": {
+        "id": "yHedJysQLSIt",
+        "outputId": "92cff1f9-8f6a-4bba-8798-293e19ab915f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: cat\n",
+            "Match: hat\n",
+            "Match: bat\n",
+            "Match: sat\n",
+            "Match: mat\n",
+            "Match: bat\n",
+            "Match: bat\n",
+            "\n",
+            "\n",
+            "Match: cat\n",
+            "Match: hat\n",
+            "Match: bat\n",
+            "Match: sat\n",
+            "Match: mat\n",
+            "Match: bat\n",
+            "Match: bat\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#1a 💣💊COMPARE\n",
         "#TypeError: expected string, not a list (💊Just try to understand 'string' at the beginners' level.)\n",
         "text3 = ['cat', 'hat', 'bat', 'sat', 'mat', 'combat', 'unbated']\n",
@@ -303,6 +345,38 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"color or colour?\"\n",
+        "pattern = r\"colou?r\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "E_AOEU7QN2FE",
+        "outputId": "cb218908-d011-4945-ddd2-56492cfdf16e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: color\n",
+            "Match: colour\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#2a 💣💊COMPARE\n",
         "text2 = \"color, colour, or coloer?\"\n",
         "pattern = r\"colou?r\"  # u는 0 또는 1번 나타날 수 있음.\n",
@@ -371,6 +445,41 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"ab, ac, abc, abbc, aabbc, abbbbbbbbbbbbbc, abkc\"\n",
+        "pattern = r\"ab*c\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Results:\",i)"
+      ],
+      "metadata": {
+        "id": "3DalV_JPO6Tj",
+        "outputId": "ab045f69-f12c-4c1c-8a24-c86bb83f353a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Results: ac\n",
+            "Results: abc\n",
+            "Results: abbc\n",
+            "Results: abbc\n",
+            "Results: abbbbbbbbbbbbbc\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#4. mata character + (뜻: +는 +의 앞의 요소/문자가 1회 이상 나타나야 함을 나타냄) 예시\n",
         "\n",
         "import re\n",
@@ -391,6 +500,39 @@
         "outputId": "1d36c141-ac63-4268-85a3-4cc4b8a1b677"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: cat\n",
+            "Match: caat\n",
+            "Match: caaat\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"cat, caat, caaat, caot, sat, set, \"\n",
+        "pattern = r\"ca+t\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "Jl58uEaHQVbT",
+        "outputId": "e287f87e-482c-43e4-f251-27c3c600d6c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,6 +593,40 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"cat, caat, caaat, sat, set\"\n",
+        "pattern = r\"a+t\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "hsUTM52YRdSx",
+        "outputId": "1681b401-00d5-460c-a8e6-c1e4787f2527",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: at\n",
+            "Match: aat\n",
+            "Match: aaat\n",
+            "Match: at\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#5. mata character $ (뜻: $는 문자열의 끝을 나타내는 메타 문자, 즉 해당 패턴이 문자열의 끝 부분과 일치해야 함) 예시\n",
         "\n",
         "import re\n",
@@ -477,6 +653,37 @@
           "name": "stdout",
           "text": [
             "Match: versatile.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is a popular programming language. Python is versatile!\"\n",
+        "pattern = r'versatile.$'\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "N2oAJ2A6R6sA",
+        "outputId": "45c524dd-7cee-4fc6-8d66-d978f9e22dee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: versatile!\n"
           ]
         }
       ]
@@ -582,6 +789,25 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is a poplular programming language. Python is versatile.\"\n",
+        "pattern = r'language.$'\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "DL6gEs2lS0lw"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#6. mata character ^ (뜻: ^는 패턴의 시작 부분을 나타냄. 즉, 패턴을 사용하여 문자열을 검색하거나 매치할 때, 해당 패턴이 <문자열의 시작 부분과 일치> 해야함) 예시\n",
         "import re\n",
         "\n",
@@ -601,6 +827,37 @@
         "outputId": "7f9e2625-9ffd-4315-aee3-5f5204ae1f8c"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: Python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is a programming language. Python is versatile. We all love Python.\"\n",
+        "pattern = r'^Python'\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "bF2CUnqcT6TX",
+        "outputId": "da8ae1bc-1779-4886-dd8e-aaa5ae689909",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,6 +899,39 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "#text = \"Python is a programming language. Python is versatile. We all love Python.\"\n",
+        "text = \"Is Python a programming language?\"\n",
+        "#pattern = r'^is'\n",
+        "pattern = r'^Is'\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "O0IWR1rrUnTn",
+        "outputId": "90615819-3fee-4b59-a925-a229fe57e96b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: Is\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -715,6 +1005,39 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"123 4567 89 12345\"\n",
+        "pattern = r\"\\d{3}\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "P1ltTuAxWYbO",
+        "outputId": "fa6a46ec-2782-46de-e412-e178420f0724",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 123\n",
+            "Match: 456\n",
+            "Match: 123\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#8. {숫자, 숫자} (뜻: 첫번째 숫자에서 두번째 숫자 자리수까지 검색) 예시\n",
         "# \\d Matches any single digit character from 0 to 9.\n",
         "\n",
@@ -736,6 +1059,41 @@
         "outputId": "c2804979-4720-476c-e202-4ec9e18b5ac1"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 12345\n",
+            "Match: 67899\n",
+            "Match: 12345\n",
+            "Match: 987\n",
+            "Match: 56789\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"The numbers are 12345678999, 12345, 987, and 56789\"\n",
+        "pattern = r\"\\d{3,5}\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "Ht6kct0-XPIW",
+        "outputId": "9481b71a-8605-4725-e9c4-e1160003ecbd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
