Colab을 통해 생성됨

--- a/7_class_method_member_object.ipynb
+++ b/7_class_method_member_object.ipynb
@@ -108,6 +108,22 @@
     {
       "cell_type": "code",
       "source": [
+        "class FourCal:\n",
+        "    def setdata(self, first, second):\n",
+        "\n",
+        "        self.first = first\n",
+        "\n",
+        "        self.second = second"
+      ],
+      "metadata": {
+        "id": "fQB4QDifcE7j"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Example\n",
         "class FourCal:\n",
         "  def setdata(self, first, second):\n",
@@ -124,6 +140,48 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class FourCal:\n",
+        "    def setdata(self, first, second):\n",
+        "\n",
+        "        self.first = first\n",
+        "\n",
+        "        self.second = second\n",
+        "\n",
+        "a = FourCal()\n",
+        "b = FourCal()\n",
+        "\n",
+        "a.setdata(10,20)\n",
+        "b.setdata(300,400)\n",
+        "\n",
+        "print(a.first)\n",
+        "print(a.second)\n",
+        "print(b.first)\n",
+        "print(b.second)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TE-bcH8QdCJ0",
+        "outputId": "ae86f943-bcfb-4bff-f66c-85c70910c79b"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "20\n",
+            "300\n",
+            "400\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
