Colab을 통해 생성됨

--- a/8_readtxtfilesimportingfrom_html.ipynb
+++ b/8_readtxtfilesimportingfrom_html.ipynb
@@ -416,7 +416,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 🐹🍏  <font color = 'red'> **Step-by-Step to get your text file ready for further analysis**</font>\n",
+        "## 🐹🍏  <font color = 'red'> **Step-by-Step to get your text file ready for further analysis as UTF-8 (Unicode Transformation Format)**</font>\n",
         "\n",
         "**On your machine**\n",
         "* **Mac**\n",
@@ -426,9 +426,16 @@
         "\n",
         "      1. Go to [Format] -> [Make Plain Text]</font>\n",
         "      \n",
-        "      2. Hit [Save] -> Choose a directory -> Type in a file name under \"Save as\" -> Check Plain Text Encoding: Unicode (UTF-8) (If no extension is provided, use .txt)\n",
+        "      2. Hit [Save] -> Choose a directory -> Type in a file name under \"Save as\" -> Check Plain Text Encoding: Unicode (UTF-8)\n",
+        "      (If no extension is provided, use .txt)\n",
         "\n",
-        "      3. In the term \"UTF-8,\" the number 8 refers to the number of bits used to encode characters in the UTF-8 character encoding scheme. UTF-8 is a variable-width encoding that can use 8, 16, or 24 bits to represent characters, but the most commonly used range is the 8-bit representation. This means that characters in UTF-8 can be encoded using 1 to 4 bytes, with the most common characters (those in the ASCII character set) represented using a single byte (8 bits). UTF-8은 가변 폭 인코딩으로, 문자를 나타내는 데 8, 16 또는 24비트를 사용할 수 있지만, 가장 일반적으로 사용되는 범위는 8비트 표현입니다. 이는 UTF-8에서 문자를 1바이트에서 4바이트까지 인코딩할 수 있음을 의미하며, 가장 일반적인 문자(ASCII 문자 집합에 속하는 문자)는 1바이트(8비트)로 표현됩니다.\n",
+        "      3. In the term \"UTF-8,\" the number 8 refers to the number of bits used to encode characters in the UTF-8 character\n",
+        "      encoding scheme. UTF-8 is a variable-width encoding that can use 8, 16, or 24 bits to represent characters,\n",
+        "      but the most commonly used range is the 8-bit representation. This means that characters in UTF-8 can be encoded\n",
+        "      using 1 to 4 bytes, with the most common characters (those in the ASCII character set) represented using\n",
+        "      a single byte (8 bits). UTF-8은 가변 폭 인코딩으로, 문자를 나타내는 데 8, 16 또는 24비트를 사용할 수 있지만, 가장 일반적으로\n",
+        "      사용되는 범위는 8비트 표현입니다. 이는 UTF-8에서 문자를 1바이트에서 4바이트까지 인코딩할 수 있음을 의미하며, 가장 일반적인 문자(ASCII 문자 집합에 속하는 문자)는\n",
+        "      1바이트(8비트)로 표현됩니다.\n",
         ">\n",
         "* **MS Word**\n",
         "  * [If you want to copy sentences excerpted from Crime and Punishment by Fyodor Dostovesky, click here!](https://raw.githubusercontent.com/ms624atyale/Data_Misc/main/Crime_Punishment_ChOne_Part.txt)\n",
@@ -436,18 +443,25 @@
         "  \n",
         "        1.Go to [File] -> [Save As...] Choose [File Format] -> [Plain Text(.txt)]\n",
         "        \n",
-        "        2. Hit [Save] -> [Other Encoding] -> Unicode(UTF-8) -> End lines with CR-Only (by default) or CR/LF -> Document direction: [Left-to-right] -> Hit [OK]\n",
-        "        >\n",
+        "        2. Hit [Save] -> [Other Encoding] -> Unicode(UTF-8) -> End lines with CR-Only (by default) or CR/LF\n",
+        "        -> Document direction: [Left-to-right] -> Hit [OK]\n",
+        ">\n",
+        "\n",
         "* **PC**\n",
         "  * [If you want to copy sentences excerpted from Crime and Punishment by Fyodor Dostovesky, click here!](https://raw.githubusercontent.com/ms624atyale/Data_Misc/main/Crime_Punishment_ChOne_Part.txt)\n",
         "  * Copy content from your **ms word** or html and paste it to **WordPad 메모장**.\n",
         "  \n",
         "        1.Go to [File] -> [Save As...] Choose [Text Document]\n",
         "        \n",
-        "        2. Hit [Save] -> Choose a directory -> Type in a file name under \"Save as\" -> Check Plain Text Encoding: Unicode (UTF-8) (If no extension is provided, use .txt)\n",
+        "        2. Hit [Save] -> Choose a directory -> Type in a file name under \"Save as\" -> Check Plain Text Encoding:\n",
+        "        Unicode (UTF-8) (If no extension is provided, use .txt)\n",
+        "\n",
+        "        3. If you are given two options, UTF-8a and UTF-8b, choose UTF-8b (aka, UTF-8 without BOM),\n",
+        "        which is the standard UTF-8. It is a safer choice for maximum compatibility, especially in\n",
+        "        cross-platform applications.\n",
         ">\n",
         "**<font color = 'red'>💣 [Warning]** </font>\n",
-        "* Do not select <font color = 'red'>Rich Text Format (RTF)</font>, which is the default.\n",
+        "* Do not select Rich Text Format (RTF), which is the default.\n",
         "\n",
         "* Note: Some programs give you multiple options for plain text. If this is the case in your program, make sure that you do _NOT_ select *Unicode (UTF-16).\n",
         "\n",
